--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Thermodynamic Tool</title>
+<title>Steam Table Calculator</title>
 <style>
   body {
     font-family: Arial, sans-serif;
@@ -46,11 +46,14 @@
 <body>
 
 <img src="deMlogo.png" class="logo" alt="Logo">
-<h1>Thermodynamic Tool</h1>
+<h1>Steam Table Calculator</h1>
 
+<label for="mode" style="display:block; font-weight:bold; margin-top:20px;">
+  Choose the condition:
+</label>
 <select id="mode">
-  <option>Saturated Water (by Temperature)</option>
-  <option>Saturated Water (by Pressure)</option>
+  <option>Saturated Water</option>
+  <option>Saturated Water Pressure Entry</option>
   <option>Superheated Vapor</option>
 </select>
 
@@ -135,3 +138,4 @@ setupInputs();
 
 </body>
 </html>
+
