--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Thermodynamic Tool</title>
+<title>Steam Table Calculator</title>
 <style>
   body {
     font-family: Arial, sans-serif;
@@ -61,8 +61,7 @@
 
 <footer>
   Made with <span class="heart">❤️</span> by 
-  <a href="https://www.linkedin.com/in/suyashsachindamir/" target="_blank">Suyash</a> 
-  in <a href="https://www.demellogroup.ethz.ch/" target="_blank">deMello group</a>
+  <a href="https://www.demellogroup.ethz.ch/" target="_blank">deMello group</strong></a>
 </footer>
 
 <!-- Embedded JSON data -->
@@ -85,7 +84,7 @@ function setupInputs() {
   } else if (mode.includes('Pressure') && !mode.includes('Superheated')) {
     html = `Pressure (kPa): <input type="number" id="pressInput">`;
   } else {
-    html = `Pressure (MPa): <select id="pressSelect">${[...new Set(superheat.map(d => d.P))].map(p => `<option>${p}</option>`).join('')}</select><br>
+    html = `Pressure (kPa): <select id="pressSelect">${[...new Set(superheat.map(d => d.P))].map(p => `<option>${p}</option>`).join('')}</select><br>
             Temperature (°C): <input type="number" id="tempInput">`;
   }
   document.getElementById('inputs').innerHTML = html;
@@ -135,3 +134,4 @@ setupInputs();
 
 </body>
 </html>
+
