--- a/index.html
+++ b/index.html
@@ -48,9 +48,13 @@
 <img src="deMlogo.png" class="logo" alt="Logo">
 <h1>Thermodynamic Tool</h1>
 
+<label for="mode" style="display:block; font-weight:bold; margin-top:20px;">
+  Choose the condition:
+</label>
+  
 <select id="mode">
-  <option>Saturated Water (by Temperature)</option>
-  <option>Saturated Water (by Pressure)</option>
+  <option>Saturated Water</option>
+  <option>Saturated Water</option>
   <option>Superheated Vapor</option>
 </select>
 
@@ -134,4 +138,5 @@ setupInputs();
 
 </body>
 </html>
+
 
