--- a/index.html
+++ b/index.html
@@ -84,14 +84,16 @@ const superheat = [{"P":10,"T":45.81,"v":14.67355,"u":2437.89,"h":2584.63,"s":8.
 function setupInputs() {
   const mode = document.getElementById('mode').value;
   let html = '';
-  if (mode.includes('Temperature') && !mode.includes('Superheated')) {
-    html = `Temperature (°C): <input type="number" id="tempInput">`;
-  } else if (mode.includes('Pressure') && !mode.includes('Superheated')) {
-    html = `Pressure (kPa): <input type="number" id="pressInput">`;
-  } else {
+  
+  if (mode === 'sat_temp') {
+    html = `Temperature (°C): <input type="number" id="tempInput" step="any">`;
+  } else if (mode === 'sat_press') {
+    html = `Pressure (kPa): <input type="number" id="pressInput" step="any">`;
+  } else if (mode === 'superheated') {
     html = `Pressure (kPa): <select id="pressSelect">${[...new Set(superheat.map(d => d.P))].map(p => `<option>${p}</option>`).join('')}</select><br>
-            Temperature (°C): <input type="number" id="tempInput">`;
+            Temperature (°C): <input type="number" id="tempInput" step="any">`;
   }
+  
   document.getElementById('inputs').innerHTML = html;
 }
 
@@ -114,28 +116,35 @@ function getProperties() {
 
   if (mode === 'sat_temp') {
     const T = parseFloat(document.getElementById('tempInput').value);
-    result = interpolate(satTemp, 'T', T, ["P", "v_f", "v_fg", "v_g", "u_f", "u_fg", "u_g", "h_f", "h_fg", "h_g", "s_f", "s_fg", "s_g"]);
-    if (result.P !== undefined) result.P += " kPa";
-
+    if (!isNaN(T)) {
+      result = interpolate(satTemp, 'T', T, ["P", "v_f", "v_fg", "v_g", "u_f", "u_fg", "u_g", "h_f", "h_fg", "h_g", "s_f", "s_fg", "s_g"]);
+      if (result.P !== undefined) result.P += " kPa";
+    }
   } else if (mode === 'sat_press') {
     const P = parseFloat(document.getElementById('pressInput').value);
-    result = interpolate(satPress, 'P', P, ["T", "v_f", "v_fg", "v_g", "u_f", "u_fg", "u_g", "h_f", "h_fg", "h_g", "s_f", "s_fg", "s_g"]);
-    if (result.T !== undefined) result.T += " °C";
-
+    if (!isNaN(P)) {
+      result = interpolate(satPress, 'P', P, ["T", "v_f", "v_fg", "v_g", "u_f", "u_fg", "u_g", "h_f", "h_fg", "h_g", "s_f", "s_fg", "s_g"]);
+      if (result.T !== undefined) result.T += " °C";
+    }
   } else if (mode === 'superheated') {
     const P = parseFloat(document.getElementById('pressSelect').value);
     const T = parseFloat(document.getElementById('tempInput').value);
-    const subset = superheat.filter(r => r.P === P);
-    result = interpolate(subset, 'T', T, ["v", "u", "h", "s"]);
+    if (!isNaN(P) && !isNaN(T)) {
+      const subset = superheat.filter(r => r.P === P);
+      result = interpolate(subset, 'T', T, ["v", "u", "h", "s"]);
+    }
   }
-}
 
-  
-  let outputHTML = '<h3>Results:</h3><ul>';
-  for (let [k, v] of Object.entries(result)) {
-    outputHTML += `<li>${k} = ${v}</li>`;
+  let outputHTML = '<h3>Results:</h3>';
+  if (Object.keys(result).length > 0) {
+    outputHTML += '<ul>';
+    for (let [k, v] of Object.entries(result)) {
+      outputHTML += `<li>${k} = ${v}</li>`;
+    }
+    outputHTML += '</ul>';
+  } else {
+    outputHTML += '<p>No valid data found. Please check your input.</p>';
   }
-  outputHTML += '</ul>';
   document.getElementById('output').innerHTML = outputHTML;
 }
 
@@ -144,6 +153,7 @@ setupInputs();
 
 </body>
 </html>
+
 
 
 
