--- a/index.html
+++ b/index.html
@@ -34,6 +34,19 @@
     font-size: 1.1rem;
     text-align: left;
     display: inline-block;
+    background: black; /* Black background for output */
+    padding: 15px; /* Add padding for better appearance */
+    border-radius: 5px; /* Rounded corners */
+  }
+  .result h3 {
+    color: white; /* White color for "Results" header */
+  }
+  .result li {
+    color: white; /* White color for property names and values */
+    font-family: monospace; /* Monospace for aligned numbers */
+  }
+  .result .unit {
+    color: #00ff00; /* Green color for units */
   }
   footer {
     margin-top: 40px;
@@ -118,10 +131,10 @@ function getProperties() {
   const units = {
     P: 'kPa',
     T: '°C',
-    v_f: 'm³/kg',
-    v_fg: 'm³/kg',
-    v_g: 'm³/kg',
-    v: 'm³/kg',
+    v_f: 'm<sup>3</sup>/kg',
+    v_fg: 'm<sup>3</sup>/kg',
+    v_g: 'm<sup>3</sup>/kg',
+    v: 'm<sup>3</sup>/kg',
     u_f: 'kJ/kg',
     u_fg: 'kJ/kg',
     u_g: 'kJ/kg',
@@ -159,11 +172,11 @@ function getProperties() {
   if (Object.keys(result).length > 0) {
     outputHTML += '<ul>';
     for (let [key, value] of Object.entries(result)) {
-      // Round values for display: 4 decimals for specific volumes, 2 for others
-      const formattedValue = key.startsWith('v') ? value.toFixed(4) : value.toFixed(2);
-      // Append unit from units object, or empty string if no unit defined
+      // Format all values to 4 decimal places
+      const formattedValue = value.toFixed(4);
+      // Append unit with a span for styling
       const unit = units[key] || '';
-      outputHTML += `<li>${key} = ${formattedValue} ${unit}</li>`;
+      outputHTML += `<li>${key} = ${formattedValue} <span class="unit">${unit}</span></li>`;
     }
     outputHTML += '</ul>';
   } else {
@@ -177,6 +190,7 @@ setupInputs();
 
 </body>
 </html>
+
 
 
 
