--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 <div id="output" class="result"></div>
 
 <footer>
-  Made with <span class="heart">❤️</span> by 
+  Made with <span class="heart">❤️</span> by <a href="https://www.linkedin.com/in/suyashsachindamir/" target="_blank"><strong>deMello group</strong>
   <a href="https://www.demellogroup.ethz.ch/" target="_blank"><strong>deMello group</strong></a>
 </footer>
   
@@ -531,6 +531,7 @@ setupInputs();
 
 </body>
 </html>
+
 
 
 
