--- a/index.html
+++ b/index.html
@@ -118,8 +118,9 @@
 <div id="output" class="result"></div>
 
 <footer>
-  Made with <span class="heart">❤️</span> by <a href="https://www.linkedin.com/in/suyashsachindamir/" target="_blank"><strong>deMello group</strong>
-  <a href="https://www.demellogroup.ethz.ch/" target="_blank"><strong>deMello group</strong></a>
+  Made with <span class="heart">❤️</span> by 
+  <a href="https://www.linkedin.com/in/suyashsachindamir/" target="_blank">Suyash</a> in the 
+  <a href="https://www.demellogroup.ethz.ch/" target="_blank" style="text-decoration: underline;"><strong>deMello group</strong></a>
 </footer>
   
 <!-- Embedded JSON data -->
@@ -531,6 +532,7 @@ setupInputs();
 
 </body>
 </html>
+
 
 
 
