--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
 <footer>
   Made with <span class="heart">❤️</span> by 
-  <a href="https://www.linkedin.com/in/suyashsachindamir/" target="_blank style="text-decoration: underline;"><strong>Suyash</strong></a> in the 
+  <a href="https://www.linkedin.com/in/suyashsachindamir/" target="_blank" style="text-decoration: underline;"><strong>Suyash</strong></a> in the 
   <a href="https://www.demellogroup.ethz.ch/" target="_blank" style="text-decoration: underline;"><strong>deMello group</strong></a>
 </footer>
   
@@ -532,6 +532,7 @@ setupInputs();
 
 </body>
 </html>
+
 
 
 
