--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
     width: 200px;
     margin-top: 10px;
   }
+
+  .left-image {
+  position: absolute;
+  left: 20px;
+  top: 20px;
+  width: 120px;
+  height: auto;
+}
   select, input {
     padding: 8px;
     margin: 8px;
@@ -73,6 +81,7 @@
 </head>
 <body>
 
+<img src="CriticalConstants.png" class="left-image" alt="Side Image" onerror="this.style.display='none'">
 <img src="deMlogo.png" class="logo" alt="Logo" onerror="this.style.display='none'">
 <h1>Thermodynamic Tool</h1>
 
@@ -532,6 +541,7 @@ setupInputs();
 
 </body>
 </html>
+
 
 
 
