--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
   .left-image {
   position: absolute;
   left: 20px;
-  top: 20px;
-  width: 120px;
-  height: auto;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 250px;
+  height: auto
 }
   select, input {
     padding: 8px;
@@ -541,6 +542,7 @@ setupInputs();
 
 </body>
 </html>
+
 
 
 
