--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     margin-top: 10px;
   }
 
-  .left-image {
+/*   .left-image {
   position: absolute;
   left: 60px;
   top: 50%;
   transform: translateY(-50%);
   width: 400px;
   height: auto
-}
+} */
   select, input {
     padding: 8px;
     margin: 8px;
@@ -82,7 +82,7 @@
 </head>
 <body>
 
-<img src="CriticalConstants.png" class="left-image" alt="Side Image" onerror="this.style.display='none'">
+<!-- <img src="CriticalConstants.png" class="left-image" alt="Side Image" onerror="this.style.display='none'"> -->
 <img src="deMlogo.png" class="logo" alt="Logo" onerror="this.style.display='none'">
 <h1>Thermodynamic Tool</h1>
 
@@ -542,6 +542,7 @@ setupInputs();
 
 </body>
 </html>
+
 
 
 
