--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
   
 <select id="mode">
 
+  <option value="" selected disabled>-- Select an option --</option>
   <option value="pure_species">Pure Species Properties</option>
 
   <option disabled>──────────────────────</option>
@@ -591,6 +592,7 @@ setupInputs();
 
 </body>
 </html>
+
 
 
 
